--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
         "cloudinary-labs/cloudinary-laravel": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
+        "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "textalk/websocket": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
